package cn.wjb114514.proxy.StaticProxy;

public interface ITeacherDao {
    void teach();
}
